crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_exposing_operator.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Expected an operator inside these parentheses.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Write an operator such as `(+)`.
