crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_exposing_operator_reserved.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
RESERVED SYMBOL

  × I cannot expose this as an operator:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Maybe you want (==) instead?
