crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_exposing_operator_right_paren.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: module Main exposing ((+ x))
---
nash::syntax::unclosed_delimiter

  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:26]
 1 │ module Main exposing ((+ x))
   ·                       ┬  ┬
   ·                       │  ╰── expected `)`
   ·                       ╰── opened here
   ╰────
  help: Add `)` here.
