crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_exposing_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "module Main exposing (\tx)"
---
nash::syntax

  × Tabs are not allowed.
   ╭─[src/Main.nash:1:23]
 1 │ module Main exposing (  x)
   ·                       ──
   ╰────
  help: Replace the tab with spaces.
