crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_exposing_start.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected `(` after `exposing`.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Enclose the exposed names in parentheses.
