crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_exposing_type_name.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I was parsing an exposed type, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Write the name of the type after `type`. Use `type name(..)` to expose its
        constructors as well.
