crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_exposing_type_privacy.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Invalid constructor exposure.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Write `Type(..)` to expose all constructors, or omit `(..)` to keep them
        private.
