crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_exposing_value.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Exposed operators need parentheses.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Write `(=)`.
