crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_impl_alignment.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I was parsing an impl declaration, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: All methods in this impl must start in column 3.
