crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_impl_head.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I was partway through parsing an impl head, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting a trait name and its type arguments next. For example, Show int.
