crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_impl_indent_head.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "impl\nEq int"
---
nash::syntax

  × Expected a trait name and type arguments.
   ╭─[src/Main.nash:2:1]
 1 │ impl
 2 │ Eq int
   · ─
   ╰────
  help: Write `impl Trait Type where`.
